--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@clerk/nextjs": "^4.23.5",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.1",
-    "@mux/mux-node": "^7.3.1",
-    "@mux/mux-player-react": "^1.14.2",
+    "@mux/mux-node": "^8.0.0",
+    "@mux/mux-player-react": "^2.3.3",
     "@prisma/client": "^5.3.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -30,12 +30,13 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@uploadthing/react": "^5.5.0",
+    "@uploadthing/react": "^6.3.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.276.0",
@@ -56,7 +57,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uploadthing": "^5.5.3",
+    "uploadthing": "^6.5.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
